# bw-serve-client

./: .bumpversion.cfg  .bumpversion.toml  .flake8  .flake8.backup  .gitignore  .gitlab-ci.yml  .openapi-generator-ignore  .pre-commit-config-fix.yaml  .pre-commit-config.yaml  .travis.yml  AGENTS.md  Makefile  README.md  TODO.md  WORKFLOW.md  bump_version  bumpversion  classes.txt  conf.py  flake8-plugins.txt  general.txt  generate-api  generator-pydantic.yml  git_push.sh  index.rst  notes.md  package.json  pyproject.toml  requirements.txt  routes.txt  setup-npm  setup.py  tox.ini
.github-disabled/workflows/: python.yml
.github/workflows/: docs.yml
.openapi/: .generator-pydantic.yml  .gitignore  .openapi-generator-ignore  generator-pydantic.yml  template-notes.md
.openapi-generator/: FILES
.openapi/templates/: README.mustache  __init__model.mustache  __init__package.mustache  api.mustache  api_client.mustache  api_doc_example.mustache  configuration.mustache  pyproject.mustache  requirements.mustache  rest.mustache
.openapi/templates.original/: api.mustache  api_doc_example.mustache
.sphinx/: setup-sphinx  todo.md
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
bw_serve_client/: __init__.py  api_client.py  configuration.py  error_logging.py  exceptions.py  logging.py  models.py  rest.py
bw_serve_client/api/: __init__.py  attachments_fields_api.py  collections_organizations_api.py  folders_api.py  lock_unlock_api.py  miscellaneous_api.py  send_api.py  vault_items_api.py
bw_serve_client/models/: __init__.py  collection.py  field.py  folder.py  group.py  item.py  item_card.py  item_identity.py  item_login.py  item_secure_note.py  item_template.py  lockunlock.py  lockunlock_success.py  lockunlock_success_data.py  send.py  send_template.py  send_text.py  status.py  status_data.py  status_data_template.py  unlock_post_request.py  uris.py
bw_serve_client/types/: README.md  __init__.py  global_types.py  item_types.py  other_types.py  response_types.py  send_types.py
doc/examples/: README.md
docs/: AttachmentsFieldsApi.md  Collection.md  CollectionsOrganizationsApi.md  Field.md  Folder.md  FoldersApi.md  Group.md  ItemCard.md  ItemIdentity.md  ItemLogin.md  ItemSecureNote.md  ItemTemplate.md  LockUnlockApi.md  LockunlockSuccess.md  LockunlockSuccessData.md  MiscellaneousApi.md  README.md  SendApi.md  SendTemplate.md  SendText.md  Status.md  StatusData.md  StatusDataTemplate.md  UnlockPostRequest.md  Uris.md  VaultItemsApi.md  api-analysis.txt  api-architecture.md  development.md  meanderings.md  routes.txt  vault-management-api-new-sorted.json  vault-management-api-sorted.json  vault-management-api.json  version_management.md
docs/developer/: README.md
docs/developer/contributing/: README.md
docs/developer/setup/: development-environment.md
docs/examples/: README.md  user_agent_example.py
docs/html/source/: conf.py  index.rst
docs/html/source/api/: api-client.rst  data-models.rst  exceptions.rst
docs/html/source/examples/: basic-usage.rst
docs/user/: README.md
docs/user/guides/: installation.md
docs/user/tutorials/: quick-start.md
examples/: get_items.py  types_usage_example.py
scripts/: README.md  analyze_api_structure.py  api-spec-tool.py  api-spect-tool.py  api_spec_tool.py  extract_routes.py  fix_openapi_spec.py  generate_types.py  generated-header.txt  spec-fixes-new.json  spec-fixes.json  update-spec-fixes.py  update_spec.sh  vault-management-api-fixed.json  vault-management-api-original.json
scripts/templates/: enum_template.py  imports_template.py  init_template.py  model_template.py  module_template.py  property_template.py
templates/: README.mustache  common_README.mustache  gitignore.mustache  pyproject.mustache  requirements.mustache
test/: test_attachments_fields_api.py  test_collection.py  test_collections_organizations_api.py  test_field.py  test_folder.py  test_folders_api.py  test_group.py  test_item_card.py  test_item_identity.py  test_item_login.py  test_item_secure_note.py  test_item_template.py  test_lock_unlock_api.py  test_lockunlock_success.py  test_lockunlock_success_data.py  test_miscellaneous_api.py  test_send_api.py  test_send_template.py  test_send_text.py  test_status.py  test_status_data.py  test_status_data_template.py  test_unlock_post_request.py  test_uris.py  test_vault_items_api.py
tests/: test_api_client.py  test_api_spec_tool_integration.py  test_api_spec_tool_quiet_mode.py  test_api_spec_tool_simple.py  test_error_logging.py
