[project]
name = "bw-serve-client"
version = "0.1.1"
description = "Bitwarden CLI Vault Management API"
authors = [
    {name = "Alan Young", email = "harleypig@harleypig.com"}
]
license = "MIT"
readme = "README.md"
keywords = ["Vault Management API", "vaultwarden", "bitwarden", "api-client", "python"]
requires-python = ">=3.10,<4.0"
dependencies = [
    "aenum>=3.1.11",
    "pydantic>=2.0.0,<3.0.0",
    "python-dateutil>=2.5.3",
    "requests>=2.25.0,<3.0.0",
    "urllib3>=1.25.3,<2.1.0",
    "openapi-spec-validator[dev]>=0.7.2,<0.8.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/harleypig/bw-serve-client"
Repository = "https://github.com/harleypig/bw-serve-client"
Documentation = "https://harleypig.github.io/bw-serve-client"
"Bug Tracker" = "https://github.com/harleypig/bw-serve-client/issues"
Changelog = "https://github.com/harleypig/bw-serve-client/blob/main/CHANGELOG.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "bw_serve_client"}]
exclude = ["scripts/**"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aenum = ">=3.1.11"
pydantic = ">=2.0.0,<3.0.0"
python-dateutil = ">=2.5.3"
requests = ">=2.25.0,<3.0.0"
urllib3 = ">=1.25.3,<2.1.0"
openapi-spec-validator = {extras = ["dev"], version = ">=0.7.2,<0.8.0"}

[tool.poetry.group.dev.dependencies]
bandit = ">=1.7.5,<2.0.0"
bump2version = ">=1.0.1,<2.0.0"
datamodel-code-generator = ">=0.35.0,<0.36.0"
flake8 = ">=4.0.0"
flake8-bugbear = ">=24.12.12,<25.0.0"
flake8-pyprojecttoml = ">=0.0.2,<0.0.3"
flake8-simplify = ">=0.22.0,<0.23.0"
isort = ">=5.12.0,<6.0.0"
lxml = ">=5.1.0,<6.0.0"
mypy = ">=1.9.0,<2.0.0"
pbr = ">=5.11.0,<6.0.0"
pydocstringformatter = ">=0.7.0"
pydocstyle = ">=6.3.0,<7.0.0"
pyright = ">=1.1.406,<2.0.0"
setuptools = ">=65.0.0"
setuptools-scm = ">=9.2.1,<10.0.0"
tox = ">=3.9.0"
types-mock = ">=5.2.0.20250924,<6.0.0.0"
types-python-dateutil = ">=2.8.0"
types-requests = ">=2.32.4.20250913,<3.0.0.0"
types-urllib3 = ">=1.26.0"
yamllint = ">=1.37.1"
yapf = ">=0.40.2,<1.0.0"
flake8-secure-coding-standard = "^1.4.1"
flake8-unused-arguments = "^0.0.13"
flake8-clean-block = "^0.1.2"
deepdiff = {extras = ["cli"], version = "^8.6.1"}

[tool.poetry.group.test.dependencies]
pytest = ">=7.2.1"
pytest-cov = ">=2.8.1"
pytest-mock = ">=3.12.0,<4.0.0"
pytest-randomly = ">=3.12.0"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.5.3,<2.0.0"
sphinx = ">=7.2.6,<8.0.0"
sphinx-autodoc-typehints = ">=2.0.0,<3.0.0"
sphinxcontrib-email = ">=0.3.6,<1.0.0"
sphinxcontrib-openapi = ">=0.8.4,<1.0.0"
sphinx-lint = ">=0.9.1,<1.0.0"
sphinx-rtd-theme = ">=3.0.0,<4.0.0"

[tool.mypy]
# Add to github workflows
# XXX: Need to spend time figuring out options
files = ["bw_serve_client", "scripts", "tests"]
plugins = ["pydantic.mypy"]
txt_report = ".openapi/mypy-reports"
# linecount_report = ".openapi/mypy-reports"
# linecoverage_report = ".openapi/mypy-reports"
lineprecision_report = ".openapi/mypy-reports"
strict = true
# These are set with 'strict'
# check_untyped_defs = true
# disallow_any_generics = true
# disallow_incomplete_defs = true
# disallow_untyped_calls = true
# disallow_untyped_defs = true
# no_implicit_optional = true
# but we want to allow 'str | None'
no_implicit_optional = false
# no_implicit_reexport = true
# strict_equality = true
# warn_return_any = true
# warn_unused_ignores = true
disallow_subclassing_any = true
ignore_missing_imports = true
show_error_codes = true
strict_concatenate = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pydocstringformatter]
style = ["pep257","numpydoc"]
max-line-length = 92
summary-quotes-same-line = true
linewrap-full-docstring = true

[tool.flake8]
# Match yapf configuration
max-line-length = 92
extend-ignore = [
  "E111", # indentation not multiple of 4 since we use 2-space indentation
  "E114", # indentation not multiple of 4 since we use 2-space indentation
  "E122", # indentation not multiple of 4 since we use 2-space indentation
  "E251", # unexpected spaces around keyword/parameter equals to match yapf style
  "E501", # line too long in favor of bugbear's B950
]

# Enable bugbear rules (B-series) in addition to default rules
extend-select = ["B9"]

per-file-ignores = [
  "tests/*:SCS108", # tests need asserts
]

# bugbear
extend-immutable-calls = ["pathlib.Path","Path"]

# pyflakes
doctests = true

# mccabe
max-complexity = 10

# unused-arguments
unused-arguments-ignore-dunder = true

[tool.isort]
profile = "google"
line_length = 92
indent = "  "

[tool.pydocstyle]
convention = "google"

[tool.yapf]
# Use PEP8 style as the base
based_on_style = "google"

# Basic formatting
indent_width = 2
column_limit = 92
continuation_indent_width = 4

# Whitespace and docstring settings
allow_multiline_dictionary_keys = true
allow_multiline_lambdas = true
blank_line_before_class_docstring = false
blank_line_before_module_docstring = true
indent_dictionary_value = true
spaces_before_comment = [5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80]

# Bracket handling
coalesce_brackets = true
dedent_closing_brackets = true
align_closing_bracket_with_visual_indent = false
split_before_closing_bracket = true

# Line splitting behavior
split_before_arithmetic_operator = true
split_before_dict_set_generator = true
split_before_first_argument = true
split_before_named_assigns = true
split_before_expression_after_opening_paren = false
split_penalty_after_opening_bracket = 0
split_penalty_after_unary_operator = 10000
split_penalty_for_added_line_split = 30
split_penalty_excess_character = 7000

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=bw_serve_client",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["bw_serve_client"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B601"]

[tool.datamodel-codegen]
# XXX: custom-formatters to mimic pre-commit fix config
formatters = ["isort"]
input = "scripts/vault-management-api-fixed.json"
input-file-type = "openapi"
output = "bw_serve_client/models"

output-model-type = "pydantic_v2.BaseModel"

# Typing customization
base-class = "pydantic.BaseModel"
enum-field-as-literal = "one"
field-constraints = true
set-default-enum-member = true
use-annotated = true
use-union-operator = true

# Field customization
capitalise-enum-members = true
snake-case-field = true
strip-default-none = true
union-mode = "smart"
use-default = true
use-default-kwarg = true
use-field-description = true

# Model customization
allow-population-by-field-name = true
collapse-root-models = true
disable-appending-item-suffix = true
disable-timestamp = true
enable-version-header = true
extra-fields = "forbid"
# keep-model-order = true
output-datetime-class = "AwareDatetime"
reuse-model = true
target-python-version = "3.10"
use-schema-description = true
use-title-as-name = true

# Template Customization
custom-file-header-path = "scripts/generated-header.txt"
encoding = "utf8"
use-double-quotes = true
wrap-string-literal = true

# OpenAPI options
include-path-parameters = true
openapi-scopes = ["schemas","paths","tags","parameters"]
strict-nullable = true
#use-operation-id-as-name = true
